test_suite/alan-2022-examples/failing/004790_mutation.alan
source I8c begin leave X4 * rem t end
